2004-05-20    <chromakode@llama>

	* fgdiag/lib/fgdb.py (Database.add_gizmo): Create Gizmos!

	* fgdiag/lib/logging.py (_LogReceptor): Made private

2004-05-18    <chromakode@llama>

	* fgdiag/lib/fgdb.py (Module): Major rewrite of SQL Generation code

2004-05-14    <chromakode@llama>

	* fgdiag/floppytest.py (Module): Created floppy drive tester, a
	port of the original shell script in testing/floppy.sh

2004-05-13    <chromakode@llama>
	
	* fgdiag/pogotest.py (Module): Modified to use testscript

	* fgdiag/lib/testscript.py: Added module for testing scripts to
	use, implements standalone features like command line argument parsing.

	* fgdiag/lib/logging.py (Module): Added TimeStamps to log
	(LogReceptor): Pluggable log output system

2004-05-12    <chromakode@llama>

	* fgdiag/lib/test.py (Module): Switched to use new logging system

	* fgdiag/lib/fgdb.py (Module): Switched to use new logging system

	* fgdiag/lib/debug.py (Module): Renamed to logging

	* fgdiag/pogotest.py (Module): Added useless logging example

2004-05-11    <chromakode@llama>

	* fgdiag/lib/test.py (Module): Modified to use debug

	* fgdiag/lib/fgdb.py (Module): Modified to use debug

	* fgdiag/lib/debug.py (Module): Added Logging Debug System

	* fgdiag/lib/userinteraction.py (error): Added error() command

	* fgdiag/lib/test.py (GizmoTester.start_test): Trap DBConnectError
	and display useful data

	* fgdiag/lib/errors.py (DBConnectError): Added DBConnectError

	* fgdiag/lib/fgdb.py (connect): Raise exception when unable to
	connect to a database

	* fgdiag/lib/unittests/test_test.py (Module): Added preliminary
	unit test

2004-05-07    <chromakode@llama>

	* fgdiag/lib/prompts.py (prompt_for_id): Added catchall SQLError
	trap and ValueError (id is not integer) trap

	* fgdiag/lib/fgdb.py (_check_id, _id_equals): Added type checking
	for ids

	* fgdiag/lib/errors.py (SQLError): Added exception to enhance
	error trapping and sql debugging.
